# cxpak

./: .cxpakignore.example  .gitignore  .mise.toml  Cargo.toml  README.md  build.rs
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-05-cxpak-design.md  2026-03-05-cxpak-implementation.md  2026-03-08-multi-file-output-design.md  2026-03-09-cxpak-v3-plan.md  2026-03-12-v060-smart-context-speed-coverage-design.md
plugin/: .mcp.json  LICENSE  README.md
plugin/.claude-plugin/: plugin.json
plugin/lib/: ensure-cxpak  ensure-cxpak-serve
plugin/skills/diff-context/: SKILL.md
plugin/tests/: mcp-wiring.bats  test_plugin_structure.bats  test_skill_diff_context.bats
scripts/: install-hooks.sh
src/: lib.rs  main.rs  util.rs
src/budget/: counter.rs  degrader.rs  mod.rs
src/cache/: mod.rs  parse.rs
src/cli/: mod.rs
src/commands/: diff.rs  mod.rs  overview.rs  serve.rs  trace.rs
src/context_quality/: annotation.rs  degradation.rs  expansion.rs  mod.rs
src/git/: mod.rs
src/index/: graph.rs  mod.rs  ranking.rs
src/output/: json.rs  markdown.rs  mod.rs  xml.rs
src/parser/: language.rs  mod.rs
src/parser/languages/: bash.rs  c.rs  cpp.rs  csharp.rs  css.rs  dart.rs  dockerfile.rs  elixir.rs  go.rs  graphql.rs  groovy.rs  haskell.rs  java.rs  javascript.rs  julia.rs  kotlin.rs  lua.rs  makefile.rs  markdown.rs  matlab.rs  mod.rs  objc.rs  ocaml.rs  prisma.rs  proto.rs  python.rs  r.rs  ruby.rs  rust.rs  scala.rs  scss.rs  sql.rs  svelte.rs  swift.rs  toml_lang.rs  typescript.rs  xml.rs  yaml.rs  zig.rs
src/relevance/: mod.rs  seed.rs  signals.rs
src/scanner/: defaults.rs  mod.rs
src/schema/: detect.rs  extract.rs
tests/: cli_test.rs  diff_test.rs  overview_test.rs  scanner_test.rs  serve_test.rs
tests/fixtures/simple_repo/tests/: test.rs
