[package]
name = "cxpak"
version = "0.10.0"
edition = "2021"
description = "Spends CPU cycles so you don't spend tokens. The LLM gets a briefing packet instead of a flashlight in a dark room."
license = "MIT"
repository = "https://github.com/Barnett-Studios/cxpak"
keywords = ["llm", "context", "tree-sitter", "cli", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.25"
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tiktoken-rs = "0.6"
git2 = { version = "0.19", features = ["vendored-openssl"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
tree-sitter-kotlin-ng = { version = "1.1.0", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-css = { version = "0.25", optional = true }
tree-sitter-scss = { version = "1.0", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-markdown-updated = { version = "0.1", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-toml-updated = { version = "0.20", optional = true }
tree-sitter-dockerfile-updated = { version = "0.2", optional = true }
tree-sitter-hcl = { version = "1.1", optional = true }
tree-sitter-dart = { version = "0.1", optional = true }
tree-sitter-scala = { version = "0.25", optional = true }
tree-sitter-lua = { version = "0.5", optional = true }
tree-sitter-elixir = { version = "0.3", optional = true }
tree-sitter-zig = { version = "1.1", optional = true }
tree-sitter-haskell = { version = "0.23", optional = true }
tree-sitter-groovy = { version = "0.1", optional = true }
tree-sitter-objc = { version = "3.0", optional = true }
tree-sitter-r = { version = "1.2", optional = true }
tree-sitter-julia = { version = "0.23", optional = true }
tree-sitter-ocaml = { version = "0.24", optional = true }
tree-sitter-matlab = { version = "1.3", optional = true }
tree-sitter-proto = { version = "0.4", optional = true }
tree-sitter-svelte-ng = { version = "1.0", optional = true }
tree-sitter-make = { version = "1.1", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-graphql = { version = "0.1", optional = true }
tree-sitter-xml = { version = "0.7", optional = true }
tree-sitter-sequel = { version = "0.3", optional = true }
tree-sitter-prisma-io = { version = "1.6", optional = true }
regex = "1"
notify = { version = "7", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[features]
default = [
    "lang-rust", "lang-typescript", "lang-javascript", "lang-java", "lang-python", "lang-go",
    "lang-c", "lang-cpp", "lang-ruby", "lang-csharp", "lang-swift", "lang-kotlin",
    "lang-bash", "lang-css", "lang-scss", "lang-php", "lang-markdown",
    "lang-json", "lang-yaml", "lang-toml", "lang-dockerfile", "lang-hcl", "lang-dart",
    "lang-scala", "lang-lua", "lang-elixir", "lang-zig", "lang-haskell",
    "lang-groovy", "lang-objc", "lang-r", "lang-julia", "lang-ocaml", "lang-matlab",
    "lang-proto", "lang-svelte", "lang-makefile", "lang-html", "lang-graphql", "lang-xml",
    "lang-sql", "lang-prisma",
]
lang-rust = ["dep:tree-sitter-rust"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-java = ["dep:tree-sitter-java"]
lang-python = ["dep:tree-sitter-python"]
lang-go = ["dep:tree-sitter-go"]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-swift = ["dep:tree-sitter-swift"]
lang-kotlin = ["dep:tree-sitter-kotlin-ng"]
lang-bash = ["dep:tree-sitter-bash"]
lang-css = ["dep:tree-sitter-css"]
lang-scss = ["dep:tree-sitter-scss"]
lang-php = ["dep:tree-sitter-php"]
lang-markdown = ["dep:tree-sitter-markdown-updated"]
lang-json = ["dep:tree-sitter-json"]
lang-yaml = ["dep:tree-sitter-yaml"]
lang-toml = ["dep:tree-sitter-toml-updated"]
lang-dockerfile = ["dep:tree-sitter-dockerfile-updated"]
lang-hcl = ["dep:tree-sitter-hcl"]
lang-dart = ["dep:tree-sitter-dart"]
lang-scala = ["dep:tree-sitter-scala"]
lang-lua = ["dep:tree-sitter-lua"]
lang-elixir = ["dep:tree-sitter-elixir"]
lang-zig = ["dep:tree-sitter-zig"]
lang-haskell = ["dep:tree-sitter-haskell"]
lang-groovy = ["dep:tree-sitter-groovy"]
lang-objc = ["dep:tree-sitter-objc"]
lang-r = ["dep:tree-sitter-r"]
lang-julia = ["dep:tree-sitter-julia"]
lang-ocaml = ["dep:tree-sitter-ocaml"]
lang-matlab = ["dep:tree-sitter-matlab"]
lang-proto = ["dep:tree-sitter-proto"]
lang-svelte = ["dep:tree-sitter-svelte-ng"]
lang-makefile = ["dep:tree-sitter-make"]
lang-html = ["dep:tree-sitter-html"]
lang-graphql = ["dep:tree-sitter-graphql"]
lang-xml = ["dep:tree-sitter-xml"]
lang-sql = ["dep:tree-sitter-sequel"]
lang-prisma = ["dep:tree-sitter-prisma-io"]
daemon = ["dep:notify", "dep:axum", "dep:tokio"]
